[package]
name = "gstack-buffer"
version = "0.1.0"
authors = ["StackOverflowExcept1on"]
edition = "2021"
description = "Library to use stack allocation for WebAssembly target"
repository = "https://github.com/StackOverflowExcept1on/gstack-buffer"
license = "MIT"
keywords = ["stack", "stack-allocation"]
categories = ["api-bindings", "no-std"]

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
compile-alloca = ["cc"]
stack-clash-protection = []

[profile.release]
lto = "fat"
